#VERSION 0.7.97#


*  Peak_Core > Peak_Configs is stored in Peak_Registry under the name of 'core_config'

*  added Peak_Application_Modules > allow to create/use complet modules application inside application
                                    
*  Peak_Core > added methods init(), initApp() and initModules(). Removed methods setPath() and getPaths().
               modified getPath() to point to new Peak_Config object.
               A lot of files was affected by this change because we replace a lot of php constants by
               Peak_Core::getPath() static method (boot, autoload, Controller, Controller Helpers, 
               View, View Helpers, View Render Partials/Layouts and View theme)

*  added Peak_Config > this new class allow core paths configuration to be overdriven and get rid of all paths constants

*  Peak_Router > minor fix to method getRequestURI()

*  Peak_View_Helper deleted, no more usefull since Peak_View_Helpers accomplish the same.
   Important change: View Helpers don't have to extends anymore this class.

*  Peak_Controller_Helpers have access to others helpers

*  Peak_Controller > no more need to init a controller helper before using it.

*  Peak_Helpers > added method exists()

*  added Zend/Loader.php since Zend/Reflection/Docblock classes require this file.

*  View helpers new class name prefix: 'View_Helper_'
   Controller helpers new class name prefix: 'Controller_Helper_'
   Those changes standardize class name for application and library helpers.

*  depracated Peak_Utils class 

*  Peak_Controller_Helpers now support native peak library controller helper folder too.

*  Peak_Exception > added constant ERR_HELPER_NOT_FOUND

*  added Peak_Helpers abstract class > Peak_View_Helpers and Peak_Controller_Helpers now extends this class of instead
                                       duplicating the code for almost the same behavior. Extends this class